crates/cli/tests/snapshots/snapshot_tests__markdown_health_empty.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: no functions exceed complexity thresholds

**200** functions analyzed (max cyclomatic: 20, max cognitive: 15, max CRAP: 30.0)
