crates/cli/tests/snapshots/snapshot_tests__markdown_health_with_coverage_intelligence.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 high complexity function

| File | Function | Severity | Cyclomatic | Cognitive | CRAP | Lines |
|:-----|:---------|:---------|:-----------|:----------|:-----|:------|
| `src/complex.ts:42` | `processData` | high | 25 **!** | 30 **!** | - | 120 |

**50** files, **200** functions analyzed (thresholds: cyclomatic > 20, cognitive > 15, CRAP >= 30.0)

## Runtime Coverage

- Verdict: cold-code-detected
- Functions tracked: 6
- Hit: 3
- Unhit: 2
- Untracked: 1
- Coverage: 50.0%
- Traces observed: 2847291
- Period: 30 day(s), 14 deployment(s)

- Watermark: license-expired-grace

| ID | Path | Function | Verdict | Invocations | Confidence |
|:---|:-----|:---------|:--------|------------:|:-----------|
| `plow:prod:deadbeef` | `src/cold.ts`:14 | `coldPath` | review_required | 0 | medium |
| `plow:prod:feedface` | `src/unknown.ts`:8 | `lateBound` | coverage_unavailable | - | none |

| ID | Hot path | Function | Invocations | Percentile |
|:---|:---------|:---------|------------:|-----------:|
| `plow:hot:cafebabe` | `src/hot.ts`:3 | `hotPath` | 250 | 99 |

## Coverage Intelligence

- Verdict: risky-change-detected
- Findings: 2
- Ambiguous matches skipped: 1

| ID | Path | Identity | Verdict | Recommendation | Confidence | Signals |
|:---|:-----|:---------|:--------|:---------------|:-----------|:--------|
| `plow:coverage-intel:0badc0de` | `src/hot.ts`:10 | `handler` | risky-change-detected | add-test-or-split-before-merge | high | changed, hot_path, low_test_coverage, high_crap |
| `plow:coverage-intel:1deadfa1` | `src/dead.ts`:4 | `deadPath` | high-confidence-delete | delete-after-confirming-owner | high | static_unused, runtime_cold, no_test_path |
