crates/cli/tests/snapshots/snapshot_tests__markdown_re_export_variant.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
## Plow: 1 issue found

### Unused exports (1)

- `src/index.ts`
  - :1 `reExportedFn` (re-export)
